# PlasmaVideoWallpaper

./: .gitignore  CMakeLists.txt
locale/zh_CN/LC_MESSAGES/: plasma_wallpaper_org.kde.plasma.videowallpaper.mo  plasma_wallpaper_org.kde.plasma.videowallpaper.po
package/contents/ui/: config.qml  main.qml
video/: CMakeLists.txt
video/package/contents/config/: main.xml
web/: CMakeLists.txt
web/package/: metadata.desktop
web/package/contents/config/: main.xml
web/package/contents/ui/: config.qml  main.qml
